wp/wp-content/themes/phila.gov-theme/css/scss/_a-z-list.scss
.service.directory{
  .result{
    float:right;
  }
}

.a-z-list {
  nav{
    font-size:1.5rem;
    font-family: 'Montserrat';
    text-align: center;
    ul{
      //specific margin here to ensure this lines up with "filter" heading next to it
      margin-bottom: .64rem;
      li{
        width:21px;

        a:link, a:visited{
          font-weight: normal;
        }
      }
    }
  }
  &.border-top-none{
    .row:first-of-type{
      border-top:none;
    }
  }

  a[disabled] {
    pointer-events: none;
    color:color(ghost-gray);
  }

  .a-z-group span:focus {
    background: color(dark-gray);
    color: white;
    padding: 0 10px;
    margin: 0;
    outline: none;
    border: 0;
  }

}

#a-z-filter-list{
  hr{
    margin-top:1rem;
    margin-bottom: 1rem;

    &::after{
      content: attr(data-alphabet);
      display: inline-block;
      margin-top: 1.9rem;
      font-size: $large-font-base / 1.75;
      line-height: 1;
      text-transform: uppercase;
      font-family: 'Montserrat', 'Tahoma', sans-serif;
      font-weight: 400;
    }
  }
}

.directory{

  #mobile-filter {
    background: rgba(0, 0, 0, 0.2);

    .inner-modal {
      background-color: #fff;
      margin-top: 4rem;
      padding-bottom: 2rem;

      .close-button {
        position:initial;
      }
    }
  }

  .filter{
    li{
      padding:$spacing-small 0;
      @media screen and (min-width: 40em) {
        border-top:1px solid color(sidewalk);
      }
      label{
        margin:0;
      }
    }
  }
}

